--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -2,6 +2,16 @@
 	min-height: 100vh;
 	padding: var(--space-8);
 }
+/* .container {
+	min-height: 100vh;
+	padding: var(--space-8);
+
+
+	background-image: url("../../assets/Wallpaper.png");
+	background-repeat: repeat; 
+	background-size: 500px 500px; 
+	background-color: #fdf6f0; 
+} */
 
 .hero {
 	text-align: center;
@@ -122,7 +132,6 @@
 	transform: translateY(-2px);
 }
 
-/* Responsive */
 @media (max-width: 768px) {
 	.container {
 		padding: var(--space-4);
